[package]
name = "SEC_treasure_hunt"
version = "0.1.0"
authors = ["alban_favre <fav.alban2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.0"
rand = "0.8.0"
read_input = "0.8"
matches = "0.1.8"
regex = "1"